# WinCalc

./: CMakeLists.txt
WinCalc/: CMakeLists.txt  WinCalc.cpp  WinCalc.h
